# price-predicter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  QUICKSTART.md  README.md  README_AUTOCLAUDE.md  RESEARCH_PRIORITIES.md  autoclaude.ps1  improvement_plan.md  manager_engineer.ps1  pyproject.toml  pytest.ini  requirements.txt  run.py  run_all_tests.py  start.py  test_autoclaude_sessions.ps1  test_autoclaude_sessions_robust.ps1  test_debug_session.ps1  train.py  train_results.txt
docs/: Aetheris Oracle_ Research Roadmap.md  CODE_REVIEW.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_FIXES_APPLIED.md  CODE_REVIEW_IMPLEMENTATION_PLAN.md  DATA_AUDIT.md  FULL_SOTA_INVESTIGATION.md  PHASE_2_PERFORMANCE_IMPROVEMENTS.md  SOTA_BUG_ANALYSIS.md  connectors.md  instructions.md  progress_v10.md  status.md
scripts/: README_VALIDATION.md  ab_testing_framework.py  backtest_sota.py  check_forecast_bias.py  collect_historical_data.py  compare_legacy_vs_sota.py  debug_sota.py  diagnose_calibration.py  diagnose_component_isolation.py  diagnose_components.py  historical_validation.py  hyperparameter_tuning.py  isolate_bias_source.py  quick_train_test.py  retrain_with_historical.py  run_validation.py  show_training_results.py  train_all_sota.py  validate_all_sota.py  validate_data.py  validate_trained_models.py  verify_sota.py
tests/: test_api_and_monitoring.py  test_api_validation.py  test_auth_and_service.py  test_calibration_and_scenario.py  test_csv_connector.py  test_data_quality.py  test_free_connectors.py  test_historical_validation.py  test_local_store_connector.py  (+7 more)
(+67 files in other folders)
